# final-project

./: CMakeLists.txt  README.md
docs/: ai_collaboration.md  implementation_plan.md  initial_feature_tests.md
docs/feature_specs/: collect_clipper_card.md  collect_clipper_card_object.md
src/: BartSnake.cpp  BartSnake.h  BartSnakeGame.cpp  BartSnakeGame.h  ClipperCard.cpp  ClipperCard.h  GameMap.cpp  GameMap.h  main.cpp
tests/: test_main.cpp
